# project7

./: LICENSE  README.md  pyproject.toml  requirements.txt  transcription_binding_sites.py
.github/workflows/: pytest.yml
nn/: __init__.py  autoencoder.py  io.py  nn.py  preprocess.py  step2_autoencoder.ipynb
test/: test.py  test_nn.py
